--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1 id="level-title">Press A Key to Start</h1>
+  <div class="titletext"><h1 id="level-title">_ Press A Key to Start _</h1></div>
   <div class="container">
     <div lass="row">
 
